--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -13,9 +13,9 @@
         Pink: hsl(356, 66%, 75%)
         Teal: hsl(174, 63%, 62%)
   */
-  --first-hue: 250;
-  --sat: 66%;
-  --lig: 75%;
+  --first-hue: 207;
+  --sat: 63%;
+  --lig: 62%;
   --second-hue: 219;
   --first-color: hsl(var(--first-hue), var(--sat), var(--lig));
   --first-color-alt: hsl(var(--first-hue), var(--sat), 71%); /* -4% */
@@ -112,14 +112,75 @@ img {
 }
 
 /*=============== THEME ===============*/
-
+.change-theme {
+  font-size: 1.25rem;
+  cursor: pointer;
+  transition: 0.3s;
+}
+.change-theme:hover {
+  color: var(--first-color);
+}
 /*========== Variables Dark theme ==========*/
-
+body.light-theme {
+  --title-color: hsl(var(--second-hue), 15%, 15%);
+  --text-color: hsl(var(--second-hue), 8%, 35%);
+  --body-color: hsl(var(--second-hue), 100%, 99%);
+  --container-color: #fff;
+}
 /*========== 
     Color changes in some parts of 
     the website, in light theme
 ==========*/
+.light-theme .scroll-header {
+  box-shadow: 0 2px 4px hsla(0%, 0%, 1%, 0.1);
+}
 
+.light-theme .nav__menu {
+  background-color: hsla(var(--second-hue), 32%, 90%, 0.8);
+}
+
+.light-theme .section__subtitle {
+  color: var(--text-color);
+}
+.light-theme .home__social-link {
+  box-shadow: 0 2px 8px hsla(var(--second-hue), 48%, 8%, 0.1);
+}
+
+.light-theme .home__social::after,
+.light-theme .footer__social-link {
+  background-color: var(--title-color);
+}
+.light-theme .home__social-link,
+.light-theme .home_scroll,
+.light-theme .button,
+.light-theme .button:hover,
+.light-theme .active-work,
+.light-theme .footer__title,
+.light-theme .footer__link,
+.light-theme .footer__copy {
+  color: var(--title-color);
+}
+
+light-theme .about__box {
+  box-shadow: 2px 8px hsla(var(--second-hue), 48%, 8%, 0.1);
+}
+.light-theme .skills__content,
+.light-theme .services__card,
+.light-theme .work__card,
+.light-theme .testimonial__card,
+.light-theme .contact__card {
+  box-shadow: 0 2px 16px hsla(var(--second-hue), 48%, 8%, 0.1);
+}
+
+.light-theme::-webkit-scrollbar {
+  background-color: hs1(var(--second-hue), 8%, 66%);
+}
+.light-theme::-webkit-scrollbar-thumb {
+  background-color: hs1(var(--second-hue), 8%, 54%);
+}
+.light-theme::-webkit-scrollbar-thumb:hover {
+  background-color: hsl(var(--second-hue), 8%, 44%);
+}
 /*=============== REUSABLE CSS CLASSES ===============*/
 .container {
   max-width: 968px;
@@ -165,6 +226,7 @@ img {
   width: 100%;
   background-color: var(--body-color);
   z-index: var(--z-fixed);
+  transition: 0.4s;
 }
 
 .nav {
@@ -207,8 +269,20 @@ img {
 }
 
 /* Active link */
+.active-link {
+  background: linear-gradient(
+    180deg,
+    hsla(var(--first-hue), var(--sat), var(--lig), 1),
+    hsla(var(--first-hue), var(--sat), var(--lig), 0.2)
+  );
+  box-shadow: 0 0 16px hsla(var(--first-hue), var(--sat), var(--lig), 0.4);
+  color: var(--title-color);
+}
 
 /* Change background header */
+.scroll-header {
+  box-shadow: 0 4px 4px hsla(0, 0%, 4%, 0.3);
+}
 
 /*=============== HOME ===============*/
 .home__container {
@@ -432,7 +506,6 @@ img {
 .qualification__button.qualification__active {
   color: var(--first-color);
 }
-/* Services modal */
 
 /*Active modal*/
 
@@ -508,6 +581,7 @@ img {
 .work__img {
   border-radius: 1rem;
   margin-bottom: 0.75rem;
+  background-color: #fff;
 }
 .work__title {
   font-size: var(--normal-font-size);
@@ -531,6 +605,10 @@ img {
 }
 
 /* Active item work*/
+.active-work {
+  background-color: var(--first-color);
+  color: var(--body-color);
+}
 
 /*=============== TESTIMONIAL ===============*/
 
@@ -618,21 +696,25 @@ img {
 }
 
 .contact__form-tag {
-    position: absolute;
-    top: -.75rem;
-    left: 1.25rem;
-    font-size: var(--smaller-font-size);
-    padding: .25rem;
-    background-color: var(--body-color);
-    z-index: 10;
+  position: absolute;
+  top: -0.75rem;
+  left: 1.25rem;
+  font-size: var(--smaller-font-size);
+  padding: 0.25rem;
+  background-color: var(--body-color);
+  z-index: 10;
 }
 
 .contact__form-area {
-    height: 11rem;
+  height: 11rem;
 }
 
 .contact__form-area textarea {
-    resize: none;
+  resize: none;
+}
+
+#send-button {
+  margin: 1rem;
 }
 
 /*=============== FOOTER ===============*/
@@ -699,6 +781,31 @@ img {
   .nav__menu {
     padding: 1rem 1.5rem;
   }
+  .home__buttons {
+    flex-direction: column;
+  }
+  .home__handle {
+    width: 150px;
+    height: 253px;
+  }
+  .home__img {
+    width: 130px;
+  }
+  .about__info {
+    grid-template-columns: repeat(2, 1fr);
+  }
+  .skills__box {
+    column-gap: 1rem;
+  }
+  .skills__name {
+    font-size: var(--small-font-size);
+  }
+  .work__item {
+    font-size: var(--small-font-size);
+  }
+  .work__filters {
+    column-gap: 0.25rem;
+  }
 }
 /* For medium devices */
 @media screen and (min-width: 576px) {
@@ -728,15 +835,32 @@ img {
   .work__img {
     width: 295px;
   }
+  .contact__info {
+    grid-template-columns: 300px;
+    justify-content: center;
+  }
+  .contact__form {
+    width: 360px;
+    margin: 0 auto;
+  }
 }
-
+@media screen and (min-width: 767px) {
+  .work__container {
+    grid-template-columns: repeat(2, max-content);
+  }
+  .contact__container {
+    grid-template-columns: repeat(2, max-content);
+    justify-content: center;
+    column-gap: 3rem;
+  }
+}
 /* For large devices */
 @media screen and (min-width: 992px) {
   .container {
     margin: 0 auto;
   }
   .section {
-    padding: 6rem 0 1rem;
+    padding: 6.5rem 0 1rem;
   }
   .section__title {
     margin-bottom: 3.5rem;
@@ -759,7 +883,7 @@ img {
     padding: 0.4rem;
     font-size: 1.25rem;
   }
-  .home__scroll::after {
+  .home__scocial::after {
     transform: rotate(90deg) translate(16px, 0);
   }
   .home__scroll-icon {
