--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -579,6 +579,8 @@ light-theme .about__box {
   border-radius: 1rem;
 }
 .work__img {
+  width: 295px;
+  height: 150px;
   border-radius: 1rem;
   margin-bottom: 0.75rem;
   background-color: #fff;
